Text overflowing issues fixed,but bug on lap view remain

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,10 @@
 #root {
     width: 100%;
+    height: 1000px;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
+
 
 
 
@@ -30,10 +34,11 @@
     padding: 10px 70px;
     background-color: #d50000;
     /* Add a background color */
-    top: 0;
+    top: 0px;
     /* Stick to the top of the viewport */
     z-index: 1000;
     height: 90px;
+    
 
     @include mobile {
         height: 55px;
@@ -44,6 +49,7 @@
         top: 0;
         width: 100%;
         z-index: 100;
+        background-color: #393737;
         // Additional styles for the sticky navbar, if needed
     }
 
@@ -112,30 +118,41 @@
 
 .wrapper {
     width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    .search-box{
-        // margin-top: 24px;
-        padding: 10px;
-        border-radius: 10px;
-        width: 520px;
-        border: none;
-        outline: none;
-        font-size: large;
-        background: transparent;
-        border-bottom:  solid rgb(137, 132, 132) 5px;
-        @include mobile{
+    .search-container {
 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 24px;
+
+
+        .search-box {
             // margin-top: 24px;
             padding: 10px;
             border-radius: 10px;
-            width: 220px;
-          
-            // text-align: center;
-        }
+            width: 520px;
+            border: none;
+            outline: none;
+            font-size: large;
+            background: transparent;
+            border-bottom: solid rgb(137, 132, 132) 5px;
 
+            @include mobile {
+
+                // margin-top: 24px;
+                padding: 10px;
+                border-radius: 10px;
+                width: 220px;
+
+                // text-align: center;
+            }
+
+        }
     }
 
     .container {
@@ -181,6 +198,13 @@
                     height: 20px;
                     font-size: 20px;
 
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    -webkit-line-clamp: 1; /* Limit to two lines */
+                    max-height: 4.2em; /* Two lines with some additional height */
+                    line-height: 1; /* Adjust this based on your font-size */
+
                     @include mobile {
                         width: 131px;
                         font-size: 18px;
@@ -189,7 +213,14 @@
 
                 .product_description {
                     width: 200px;
-                    padding-top: 9px;
+                   
+
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    -webkit-line-clamp: 2; /* Limit to two lines */
+                    max-height: 3.2em; /* Two lines with some additional height */
+                    line-height: 1.6; /* Adjust this based on your font-size */
 
                     @include mobile {
                         width: 122px;
@@ -246,7 +277,7 @@
     @include mobile {
         overflow: scroll;
         overflow-x: hidden;
-
+        scroll-behavior: smooth;
     }
 
     .cart {
@@ -255,7 +286,7 @@
         align-items: center;
         justify-content: center;
 
-        .header{
+        .header {
 
 
             @include mobile {
@@ -264,7 +295,9 @@
                 align-items: center;
                 justify-content: center;
                 padding-top: 31px;
+                background-color: black;
             }
+
             &.sticky {
                 position: fixed;
                 top: 0;
@@ -272,14 +305,14 @@
                 z-index: 100;
                 // Additional styles for the sticky navbar, if needed
             }
-            
+
             .close-btn {
                 font-size: 50px;
                 position: relative;
                 top: 70px;
                 right: -600px;
                 cursor: pointer;
-                
+
                 @include mobile {
                     font-size: large;
                     position: relative;
@@ -287,9 +320,9 @@
                     right: -199px;
                 }
             }
-            
+
             .Cart-name {
-                
+
                 @include mobile {
                     font-size: large;
                 }
@@ -322,6 +355,13 @@
 
                 .cart-title {
                     width: 250px;
+
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    -webkit-line-clamp: 2; /* Limit to two lines */
+                    max-height: 3.2em; /* Two lines with some additional height */
+                    line-height: 1.6; /* Adjust this based on your font-size */
 
                     @include mobile {
                         width: 100px;
